[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wpdm-mmikolaj"  # np. "wpdm-mikolaj" (musi być unikalne!)
version = "0.1.0"
description = "Warsztat Praktyka Data Mining"
readme = "README.md"
authors = [
    {name = "Mikołaj", email = "twoj@email.com"}  # TWOJE DANE
]
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["xai", "time-series", "explainability"]
dependencies = [
    "pandas>=1.4.3",
    "numpy>=1.22.4",
    "scikit-learn>=1.1.1",
    "matplotlib>=3.5.2",
    "matplotlib-inline>=0.1.3",
    "seaborn>=0.11.2"
]